[gd_scene load_steps=3 format=3 uid="uid://c3m2qv8j7e6yi"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_main_menu"]
[ext_resource type="VideoStream" path="res://assets/menu.MP4" id="2_video"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_main_menu")

[node name="VideoBackground" type="VideoStreamPlayer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stream = ExtResource("2_video")
autoplay = true
loop = true
expand = true

[node name="DarkOverlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40

[node name="TopSpacer" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="TitleContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Title" type="Label" parent="VBoxContainer/TitleContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.4, 1)
theme_override_colors/font_shadow_color = Color(0.2, 0.1, 0, 0.8)
theme_override_colors/font_outline_color = Color(0.3, 0.15, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 72
text = "ROGUE
ARENA"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Subtitle" type="Label" parent="VBoxContainer/TitleContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.8, 0.6, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.7)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 18
text = "Survive the Chaos"
horizontal_alignment = 1

[node name="MiddleSpacer" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="PlayButton" type="Button" parent="VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(340, 90)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 0.95, 0.8, 1)
theme_override_colors/font_pressed_color = Color(1, 0.95, 0.8, 1)
theme_override_colors/font_hover_color = Color(1, 1, 0.9, 1)
theme_override_colors/font_focus_color = Color(1, 0.95, 0.8, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.8)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 32
text = "PLAY"

[node name="ShopButton" type="Button" parent="VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(340, 90)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 0.95, 0.8, 1)
theme_override_colors/font_pressed_color = Color(1, 0.95, 0.8, 1)
theme_override_colors/font_hover_color = Color(1, 1, 0.9, 1)
theme_override_colors/font_focus_color = Color(1, 0.95, 0.8, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.8)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 32
text = "SHOP"

[node name="BottomSpacer" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CoinsDisplay" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="CoinIcon" type="Label" parent="VBoxContainer/CoinsDisplay"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.84, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.7)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 28
text = "GOLD:"

[node name="CoinAmount" type="Label" parent="VBoxContainer/CoinsDisplay"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.7)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 28
text = " 0"

[node name="FooterSpacer" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="StatsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.65, 0.5, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.6)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 14
text = "Total Runs: 0 | Best Wave: 0"
horizontal_alignment = 1

[node name="FooterSpacer2" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
